.metadata/.plugins/org.eclipse.cdt.ui/task 6.build.log
18:28:24 **** Build of configuration Debug for project task 6 ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32L476xx -c -I../Core/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32L4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:185:13: error: invalid storage class for function 'MX_USART2_UART_Init'
  185 | static void MX_USART2_UART_Init(void)
      |             ^~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:220:13: error: invalid storage class for function 'MX_GPIO_Init'
  220 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:265:1: error: expected declaration or statement at end of input
  265 | }
      | ^
../Core/Src/main.c: At top level:
../Core/Src/main.c:53:13: warning: 'MX_GPIO_Init' used but never defined
   53 | static void MX_GPIO_Init(void);
      |             ^~~~~~~~~~~~
../Core/Src/main.c:54:13: warning: 'MX_USART2_UART_Init' used but never defined
   54 | static void MX_USART2_UART_Init(void);
      |             ^~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:256:6: warning: 'Error_Handler' defined but not used [-Wunused-function]
  256 | void Error_Handler(void)
      |      ^~~~~~~~~~~~~
../Core/Src/main.c:220:13: warning: 'MX_GPIO_Init' defined but not used [-Wunused-function]
  220 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:185:13: warning: 'MX_USART2_UART_Init' defined but not used [-Wunused-function]
  185 | static void MX_USART2_UART_Init(void)
      |             ^~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:135:6: warning: 'SystemClock_Config' defined but not used [-Wunused-function]
  135 | void SystemClock_Config(void)
      |      ^~~~~~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.

18:28:24 Build Failed. 4 errors, 6 warnings. (took 471ms)

